--- a/vue+gulp216/package.json
+++ b/vue+gulp216/package.json
@@ -31,7 +31,9 @@
   },
   "browserify-shim": {},
   "dependencies": {
+    "express": "^4.13.4",
     "insert-css": "^0.2.0",
+    "mysql": "^2.10.2",
     "vue": "^1.0.16",
     "vue-router": "^0.7.11"
   }
