--- a/vue+gulp216/package.json
+++ b/vue+gulp216/package.json
@@ -34,6 +34,7 @@
     "express": "^4.13.4",
     "insert-css": "^0.2.0",
     "mysql": "^2.10.2",
+    "through2": "^2.0.1",
     "vue": "^1.0.16",
     "vue-router": "^0.7.11"
   }
